--- a/app/sass/base/_libs.sass
+++ b/app/sass/base/_libs.sass
@@ -8,3 +8,4 @@
 @import "../libs/photoswipe/default-skin/default-skin.css"
 @import "../libs/form-styler/jquery.formstyler.css"
 @import "../libs/form-styler/jquery.formstyler.theme.css"
+@import "../libs/magnificPopup/magnific-popup.css"
