--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -489,6 +489,14 @@
 // ≥992px
 +media-breakpoint-down(md)
 
+  .product-slider-wrap
+    .cat-labels-wrap
+      .cat-item-label
+        font-size: 10px
+        width: 60px
+        padding: 5px
+        margin-right: 5px
+
   .cart-wrap
     flex-wrap: wrap
 
@@ -1184,6 +1192,16 @@
       font-size: 22px
 
 @media (max-width: 390px)
+
+  .s-catalog
+    .btn
+      font-size: 12px
+
+  .popup-form
+    padding: 25px 15px
+    textarea
+      height: 120px
+      font-size: 14px
 
   .cart-topline
     font-size: 12px
