--- a/app/sass/layout/_p-contacts.sass
+++ b/app/sass/layout/_p-contacts.sass
@@ -8,6 +8,8 @@
     align-items: flex-start
   &-left
     width: 570px
+    p
+      margin-bottom: 0
   &-right
     width: calc(100% - 600px)
   .del-wrap
