--- a/app/sass/layout/_s-production.sass
+++ b/app/sass/layout/_s-production.sass
@@ -20,6 +20,7 @@
     font-size: 17px
     font-weight: 700
     margin-bottom: 10px
+    display: inline-block
   &-links
     margin-bottom: 10px
   &-link
